Ajustes com melhorias e adaptações para o The Classic PW

--- a/Perfect Launcher/App.config
+++ b/Perfect Launcher/App.config
@@ -1,36 +1,40 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Perfect_Launcher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Perfect_Launcher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <Perfect_Launcher.Properties.Settings>
             <setting name="User" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string/>
                     </ArrayOfString>
                 </value>
             </setting>
             <setting name="Passwd" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string/>
                     </ArrayOfString>
                 </value>
             </setting>
             <setting name="Classe" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string/>
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="Nick" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string/>
                     </ArrayOfString>
                 </value>
             </setting>
@@ -39,9 +43,8 @@
             </setting>
             <setting name="ComboQueue" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string />
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string/>
                     </ArrayOfString>
                 </value>
             </setting>
@@ -58,7 +61,7 @@
                 <value>False</value>
             </setting>
             <setting name="BackgroundImg" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="BackgroundColor" serializeAs="String">
                 <value>Black</value>
@@ -70,12 +73,11 @@
                 <value>175</value>
             </setting>
             <setting name="LastCheckup" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DailyCheckups" serializeAs="Xml">
                 <value>
-                    <ArrayOfBoolean xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfBoolean xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
                         <boolean>false</boolean>
                         <boolean>false</boolean>
                         <boolean>false</boolean>
@@ -98,15 +100,14 @@
             </setting>
             <setting name="UsersBeforeClosing" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                        xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"/>
                 </value>
             </setting>
             <setting name="LastGlobalUpdate" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ExtraArgs" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="ForceServer" serializeAs="String">
                 <value>NENHUM</value>
