--- a/Perfect Launcher/App.config
+++ b/Perfect Launcher/App.config
@@ -10,43 +10,8 @@
     </startup>
     <userSettings>
         <Perfect_Launcher.Properties.Settings>
-            <setting name="User" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string/>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="Passwd" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string/>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="Classe" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string/>
-                    </ArrayOfString>
-                </value>
-            </setting>
-            <setting name="Nick" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string/>
-                    </ArrayOfString>
-                </value>
-            </setting>
             <setting name="bFirstRun" serializeAs="String">
                 <value>True</value>
-            </setting>
-            <setting name="ComboQueue" serializeAs="Xml">
-                <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                        <string/>
-                    </ArrayOfString>
-                </value>
             </setting>
             <setting name="Interval1" serializeAs="String">
                 <value>1150</value>
@@ -61,7 +26,7 @@
                 <value>False</value>
             </setting>
             <setting name="BackgroundImg" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="BackgroundColor" serializeAs="String">
                 <value>Black</value>
@@ -73,11 +38,71 @@
                 <value>175</value>
             </setting>
             <setting name="LastCheckup" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="bCheckedForUpdates" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="CrashWatchInterval" serializeAs="String">
+                <value>1250</value>
+            </setting>
+            <setting name="LastGlobalUpdate" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ExtraArgs" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ForceServer" serializeAs="String">
+                <value>NENHUM</value>
+            </setting>
+            <setting name="RevezarContasBtn" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="ProximaContaBtn" serializeAs="String">
+                <value>6</value>
+            </setting>
+            <setting name="ContaAnteriorBtn" serializeAs="String">
+                <value>7</value>
+            </setting>
+            <setting name="User" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="Passwd" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="Classe" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="Nick" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
+            </setting>
+            <setting name="ComboQueue" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string />
+                    </ArrayOfString>
+                </value>
             </setting>
             <setting name="DailyCheckups" serializeAs="Xml">
                 <value>
-                    <ArrayOfBoolean xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                    <ArrayOfBoolean xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
                         <boolean>false</boolean>
                         <boolean>false</boolean>
                         <boolean>false</boolean>
@@ -92,34 +117,10 @@
                     </ArrayOfBoolean>
                 </value>
             </setting>
-            <setting name="bCheckedForUpdates" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="CrashWatchInterval" serializeAs="String">
-                <value>1250</value>
-            </setting>
             <setting name="UsersBeforeClosing" serializeAs="Xml">
                 <value>
-                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"/>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
                 </value>
-            </setting>
-            <setting name="LastGlobalUpdate" serializeAs="String">
-                <value/>
-            </setting>
-            <setting name="ExtraArgs" serializeAs="String">
-                <value/>
-            </setting>
-            <setting name="ForceServer" serializeAs="String">
-                <value>NENHUM</value>
-            </setting>
-            <setting name="RevezarContasBtn" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="ProximaContaBtn" serializeAs="String">
-                <value>6</value>
-            </setting>
-            <setting name="ContaAnteriorBtn" serializeAs="String">
-                <value>7</value>
             </setting>
         </Perfect_Launcher.Properties.Settings>
     </userSettings>
